# VoiceWakeOn

./: CMakeLists.txt  Makefile  README.md  S49_voicecap.sh  make.sh
include/: Audio.h  AudioCapture.h  KwsExecutor.h  RingBuffer.h  SpeechCache.h  SpeechDetection.h  common.h  md5.h
lib/ImgDisp/: ImageDisplay.h
lib/logmel/: logmel_trans.h
source/: AudioCapture.c  KwsExecutor.cpp  RingBuffer.c  SpeechDetection.cpp  VoiceCaptcher.cpp
